--- a/src/styles/RegisterPage.css
+++ b/src/styles/RegisterPage.css
@@ -33,7 +33,10 @@
 .register-wrapper {
   width: 100%;
   max-width: 500px;
+  padding: 0 1rem;
+  box-sizing: border-box;
 }
+
 
 .register-container {
   background-color: white;
